// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results Page Component Tests ClubResultContainer should render correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Connect(ClubResult) />
  </Provider>
</Router>
`;

exports[`Results Page Component Tests PlayerClubToggle should render correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Connect(PlayerClubToggleComponent) />
  </Provider>
</Router>
`;

exports[`Results Page Component Tests PlayerResultContainer should render correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Connect(PlayerResult) />
  </Provider>
</Router>
`;

exports[`Results Page Component Tests ResultsList should render correctly 1`] = `
<div
  class="results-list-wrapper"
>
  <div
    class="no-results-wrapper"
  >
    <p
      class="no-results-text body-text-light"
    >
      We couldn't find any clubs matching " "
    </p>
    <div
      class="dividing-line background-dark"
    />
    <p
      class="no-results-sub-text body-text-light"
    >
      It doesn't look like we have data this week for ' '. Try looking under 'ALL WEEKS' to see if we have older results matching your search.
    </p>
  </div>
</div>
`;

exports[`Results Page Component Tests ResultsPage should render correctly 1`] = `
<div
  class="results-page-wrapper"
>
  <div
    class="search-bar-results-wrapper side-margin"
  >
    <div
      class="search-bar-wrapper background-light"
    >
      <input
        aria-label="Search for a player or a club"
        aria-required="true"
        autocomplete="off"
        class="search-box body-text-light"
        id="search-bar-input"
        name="Search input to search for Premier League players or clubs."
        placeholder="Search for a player or a club ..."
        type="text"
        value=""
      />
      <a
        class="react-link"
        href="/results"
      >
        <button
          class="search-button"
          id="search-button"
          type="submit"
        >
          <i
            class="fa fa-search"
          />
        </button>
      </a>
      <span />
    </div>
    <p
      class="results-info-text body-text-light"
    >
      0 results found for ""
    </p>
  </div>
  <div
    class="results-menu-wrapper"
  >
    <div
      class="player-club-toggle-wrapper"
    >
      <div
        class="player-club-toggle-player-inner-container toggle-inner-container toggle-active"
        id="player-toggle"
        role="button"
      >
        <p
          class="player-club-menu-text heading-text"
        >
          Players
        </p>
        <div
          class="results-number-box number-box-active"
          id="player-number-box"
        >
          <p
            class="results-number-text body-text"
          >
            0
          </p>
        </div>
      </div>
      <div
        class="player-club-toggle-club-inner-container toggle-inner-container"
        id="club-toggle"
        role="button"
      >
        <p
          class="player-club-menu-text heading-text"
        >
          Clubs
        </p>
        <div
          class="results-number-box"
          id="club-number-box"
        >
          <p
            class="results-number-text body-text"
          >
            0
          </p>
        </div>
      </div>
    </div>
    <div
      class="this-week-everyone-toggle-wrapper"
    >
      <div
        class="this-week-everyone-button-container"
      >
        <button
          class="this-week-everyone-button this-week-everyone-button-active body-text-light"
          id="this-week-button"
        >
          THIS WEEK
        </button>
        <button
          class="this-week-everyone-button body-text-light"
          id="everyone-button"
        >
          ALL WEEKS
        </button>
      </div>
    </div>
    <div
      class="results-list-wrapper"
    >
      <div
        class="no-results-wrapper"
      >
        <p
          class="no-results-text body-text-light"
        >
          We couldn't find any players matching " "
        </p>
        <div
          class="dividing-line background-dark"
        />
        <p
          class="no-results-sub-text body-text-light"
        >
          It doesn't look like we have data this week for ' '. Try looking under 'ALL WEEKS' to see if we have older results matching your search.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Results Page Component Tests ReviewScoreCircle should render correctly 1`] = `
<div
  class="review-score-circle body-text-light white-text background-light"
/>
`;

exports[`Results Page Component Tests ReviewScoreExplainer should render correctly 1`] = `
<div
  class="review-score-explainer-wrapper"
>
  <div
    class="review-score-circle body-text-light white-text background-light"
  >
    100
  </div>
  <p
    class="review-score-explainer-text body-text-light"
  >
    THIS WEEKS PR SCORE 
  </p>
</div>
`;

exports[`Results Page Component Tests ThisWeekEveryoneToggle should render correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Connect(ThisWeekEveryoneToggleContainer) />
  </Provider>
</Router>
`;
